fix stars, z-index span

--- a/Random_Quote_Machine/mobile.css
+++ b/Random_Quote_Machine/mobile.css
@@ -1,4 +1,8 @@
 
+html, body {
+	height:100%;
+	overflow: hidden;
+}
 
 body{
 	font-size: 1em;
@@ -8,7 +12,7 @@ body{
 }
 
 .container {
-	height: 100%;
+	position: absolute;
 }
 
 h1 {
@@ -18,18 +22,17 @@ h1 {
     font-weight:700;
     font-style:normal;
     color: white;
-    letter-spacing: .025em;
-	margin: -.125em 0 0 .125em; 
+    letter-spacing: .07em;
+	margin: -.125em 0 0 .09em; 
 }
 
 .box {
-	position: fixed;
+	position: absolute;
 	height: 23em;
 	width: 25em;
-	margin-top: .1em;
+	margin-top: .3em;
 	margin-left: -1em;
-	margin-bottom: 3em;
-	bottom: 0;
+	margin-bottom: .1em;
 }
 
 #border {
@@ -37,3 +40,24 @@ h1 {
     border-width: .8em;
     border-color: red;
 }
+
+
+.stars {
+    color: red;
+    font-size: 3.5em;
+    letter-spacing:.1em;
+
+    display: table;
+    position: absolute;
+    top:0;
+    margin-top: 1.5em;
+    margin-left: 1.05em;
+    z-index: 2;
+}
+
+span {
+    background-color: #0000E5;
+    padding: 0 .3em 0 .3em;
+    -webkit-transition:1.5s;
+}
+
